# snake-tui

./: Cargo.toml
src/: highscore.rs  main.rs  tui.rs
