[package]
name = "snake-tui"
version = "0.2.2"
edition = "2021"
description = "A cross platform snake game running in the terminal"
license = "MIT"


[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5"
rand = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
